fix: fix font size on mobile

--- a/minesweeper/src/assets/css/main.scss
+++ b/minesweeper/src/assets/css/main.scss
@@ -330,13 +330,14 @@ html {
   border-bottom: 0.4rem solid $color-light-footer-bckgrnd;
   border-left: 0.4rem solid $color-light-header-bckgrnd;
   background-color: $color-light-cell-bckgrnd;
-  font-size: 2.8rem;
+  font-size: 3em;
   font-family: 'Courier New', Courier, monospace;
   text-align: center;
 
   @media (max-width:768px) {
     width: calc(96vw / 25);
     height: calc(96vw / 25);
+    font-size: calc(96vw / 25);
   }
 
   &_push {
